# search-and-report

./: .gitignore  Cargo.toml  README.md  _default_config.json  justfile
src/: error.rs  lib.rs  parser.rs  platform.rs  platforms.rs  predicates.rs  reporter.rs  request.rs
src/parser/: yahoojp_parser.rs
src/reporter/: json_save_reporter.rs  notification_reporter.rs
