[package]
name = "search_and_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "^0.18"
chrono = { version = "^0.4", features = ["serde"]}
chrono-tz = "0.8.4"
async-trait = "^0.1"
thiserror = "^1.0"
tracing = "^0.1"
regex = "^1.10"
once_cell = "^1.18"
reqwest = "^0.11"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
notify-rust = "^4.10"
tokio-cron-scheduler = "^0.9"

[dev-dependencies]
tracing-test = "^0.2"