[package]
name = "search_and_report"
version = "0.1.0"
edition = "2021"
default-run = "main" 


[dependencies]
scraper = "^0.18"
chrono = { version = "^0.4", features = ["serde"]}
chrono-tz = "0.8.4"
async-trait = "^0.1"
thiserror = "^1.0"
tracing = "^0.1"
regex = "^1.10"
once_cell = "^1.18"
reqwest = "^0.11"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
notify-rust = "^4.10"
tokio-cron-scheduler = "^0.9"
# tokio-cron-scheduler = { git = "https://github.com/mvniekerk/tokio-cron-scheduler.git", branch = "Timezones"}
tokio = { version = "^1.34", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = "^0.3"
serde_path_to_error = "^0.1"
clap = { version = "^4.4", features = ["derive"]}

[dev-dependencies]
tracing-test = "^0.2"